force-app/main/default/objects/IFv2_Country__mdt/IFv2_Country__mdt.object-meta.xml
<CustomObject>
    <description>This is used to map country with region in InsightFlow application version 2.0</description>
    <label>Country</label>
    <pluralLabel>Countries</pluralLabel>
</CustomObject>