force-app/main/default/objects/IFv2_Country__mdt/fields/PermissionSetName__c.field-meta.xml
<CustomField>
    <fullName>PermissionSetName__c</fullName>
    <description>This is used to give permission set name, which should be assigned to a user based on his region.</description>
    <inlineHelpText>APAC - IFv2_Extension1
EMEA - IFv2_Extension2
NALA - IFv2_Extension3</inlineHelpText>
    <label>PermissionSetName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>