force-app/main/default/objects/IFv2_Country__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This is used to give Region for specific countries.</description>
    <inlineHelpText>APAC - Asia Pacific Associated Countries
EMEA - Europe and Middle East
NALA - North and Latin America</inlineHelpText>
    <label>Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>