force-app/main/default/objects/IFv2_Country__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PermissionSetName__c</columns>
    <columns>Region__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
    <language>en_US</language>
</ListView>