force-app/main/default/objects/IFv2_Country__mdt/listViews/RegionView.listView-meta.xml
<ListView>
    <fullName>RegionView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>PermissionSetName__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>Region View</label>
    <language>en_US</language>
</ListView>